# capacity-agent

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json
apps/host_agent/: CMakeLists.txt
apps/host_agent/config/: host_agent.example.toml  host_agent.maindesk.toml
apps/host_agent/include/host_agent/api/: http_server.h  json_response.h
apps/host_agent/include/host_agent/collectors/: direct_gpu_collector.h  ollama_runtime_collector.h
apps/host_agent/include/host_agent/core/: bridge_message_parser.h  service.h  snapshot_pusher.h
apps/host_agent/include/host_agent/ipc/: named_pipe_server.h
apps/host_agent/include/host_agent/model/: bridge_messages.h  telemetry_models.h
apps/host_agent/include/host_agent/storage/: sqlite_store.h
apps/host_agent/sql/: schema.sql
apps/host_agent/src/: main.cpp  pch.h
apps/host_agent/src/api/: http_server.cpp
apps/host_agent/src/collectors/: direct_gpu_collector.cpp  ollama_runtime_collector.cpp
apps/host_agent/src/core/: bridge_message_parser.cpp  service.cpp  snapshot_pusher.cpp
apps/host_agent/src/ipc/: named_pipe_server_win32.cpp
apps/host_agent/src/storage/: sqlite_store.cpp
bridges/: CMakeLists.txt
bridges/librehw_bridge/: Models.cs  Program.cs  README.md  UpdateVisitor.cs  librehw_bridge.csproj
deploy/snd-host/: README.md  start-agent.ps1  test-agent.ps1
docs/: architecture.md  current-path-and-access-model.md  ipc-contract.md
libs/gpu_telemetry/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
libs/gpu_telemetry/cmake/: gpu_telemetryConfig.cmake.in  gpu_telemetry_c.rc.in
libs/gpu_telemetry/include/gpu_telemetry/: gpu_probe.h  gpu_sensor_reader.h  gpu_snapshot.h  gpu_telemetry_c.h  nvapi_clocks.h  nvapi_fans.h  nvapi_fans_core.h  nvapi_loader.h  nvapi_thermals.h  nvapi_thermals_core.h  nvapi_undoc_extra.h  nvapi_undoc_ids.h  nvapi_undoc_types.h  nvml_loader.h
libs/gpu_telemetry/scripts/: build-release.ps1
libs/gpu_telemetry/src/: gpu_probe.cpp  gpu_sensor_reader.cpp  gpu_telemetry_c.cpp  nvapi_fans_core.cpp  nvapi_loader.cpp  nvapi_thermals_core.cpp  nvml_loader.cpp  pch.h
